--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,11 @@
 
 @import "tailwindcss";
 @plugin "daisyui" {
-   themes: dark --default, light ;
+   themes: light --default dark ;
  }
 
  @plugin "daisyui/theme" {
-   name: "dark";
+   name: "light";
    default: true;
   --color-primary: #FFCC00;
   /* --color-primary: #FBC421; */
@@ -14,8 +14,9 @@
   --color-extra: #016A70;
 }
 
-.font-urbanist {
-    font-family: "Lato", sans-serif;
+.font-outfit {
+  font-family: "Lato", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
 }
+
